--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,11 @@
 <div class="jumbotron">
 	<h1>Welcome to StagAdvisor.com</h1>
+	<% if user_signed_in? %>
 	Click here to <%= link_to "Choose a City", "#", class: "btn btn-primary" %>
+     <% else %>
+       <p>
+         <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+       </p>
+  <% end %>  
 </div>
