--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -6,6 +6,12 @@
 </p>
 
 <p>
+  <strong>Image:</strong>
+  <%= image_tag @place.image.url(:medium) %>
+</p>
+
+
+<p>
   <strong>Description:</strong>
   <%= @place.description %>
 </p>
