--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@place) do |f| %>
+<%= form_for @place, html: { multipart: true } do |f| %>
   <% if @place.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@place.errors.count, "error") %> prohibited this place from being saved:</h2>
@@ -10,6 +10,11 @@
       </ul>
     </div>
   <% end %>
+
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
+  </div>
 
   <div class="form-group">
     <%= f.label :title %><br>
