--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">StagAdvisor</a>
+    <h3><%= link_to "StagAdvisor", root_path %></h3>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,6 +17,7 @@
       <li><%= link_to "About", about_path %></li> 
       <li><%= link_to "Contact", contact_path %></li> 
        <% if user_signed_in? %>
+          <li><%= link_to 'New Place', new_place_path %></li>
           <li><%= link_to "Account Settings", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
