--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,10 +15,16 @@
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li> 
-      <li><%= link_to "Contact", contact_path %></li> 
+      <!--<li><%= link_to "Contact", contact_path %></li>-->
        <% if user_signed_in? %>
-          <li><%= link_to 'New Place', new_place_path %></li>
-          <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+          <li><%= link_to new_place_path do %>
+            <span class="glyphicon glyphicon-plus"></span> New Place
+            <% end %>  
+          </li>
+          <li><%= link_to edit_user_registration_path do %> 
+            <span class="glyphicon glyphicon-wrench"></span> Account
+            <%end%>
+          </li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
           <li><%= link_to "Sign in", new_user_session_path %></li>
