--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,15 +1,25 @@
 <div id="places" class="transition-enabled">
   <% @places.each do |place| %>
-    <div class="box panel panel-default">
-      <%= image_tag place.image.url(:medium) %>
-        <%= place.title %>
+  <div class="box panel panel-default">
+    <div class="panel-heading center">
+      <h4><%= place.title %></h4>
+      <div class="panel-body">
+        
+        <%= link_to image_tag(place.image.url(:medium)),place %>
+        
         <%= place.description %>
-        <%= place.attractions %>
-        <%= place.restaurants %>
-        <%= place.user.email if place.user%>
-        <%= link_to 'Show', place_path(place) %>
-        <%= link_to 'Edit', edit_place_path(place) %>
-        <%= link_to 'Destroy', place, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <div class="actions">
+            <%= link_to edit_place_path(place) do %>
+              <span class="glyphicon glyphicon-edit"></span>
+              Edit
+            <% end %> |
+            <%= link_to place, method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <span class="glyphicon glyphicon-trash"></span>
+                Delete
+            <% end %>
+          </div>
+        </div>  
     </div>
+  </div>
   <% end %>
 </div>
