--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,30 +1,25 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @place.title %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <%= image_tag @place.image.url(:medium) %>
-</p>
-
-
-<p>
-  <strong>Description:</strong>
-  <%= @place.description %>
-</p>
-
-<p>
-  <strong>Attractions:</strong>
-  <%= @place.attractions %>
-</p>
-
-<p>
-  <strong>Restaurants:</strong>
-  <%= @place.restaurants %>
-</p>
-
-<%= link_to 'Edit', edit_place_path(@place) %> |
-<%= link_to 'Back', places_path %>
+<%= link_to places_path do %>
+<span class = "glyphicon glyphicon-chevron-left"></span>
+Back
+<%end%>
+<div class="row">
+	<div class="col-md-offset2 col-md-8">
+		<div class="panel panel-default">
+			<div class="panel-heading center">
+				<h2><%= @place.title %></h2>
+				
+				<p><%= image_tag @place.image.url(:medium) %></p>
+					<div class="panel-body">
+					<p><strong>Description:</strong><%= @place.description %></p>
+					<p><strong>Attractions:</strong><%= @place.attractions %></p>
+					<p><strong>Restaurants:</strong><%= @place.restaurants %></p>
+					<div class = "actions">
+						<%= link_to edit_place_path(@place) do %> 
+							 <span class="glyphicon glyphicon-edit"></span> Edit
+      			<% end %>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
