--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -21,10 +21,13 @@
     <%= f.text_field :title, class:"form-control"  %>
   </div>
 
-
+  <div class="form-group">
+    <%= f.label :headline %><br>
+    <%= f.text_field :headline, class:"form-control"  %>
+  </div>
   <div class = "form-group">
     <%= f.label :description %><br>
-    <%= f.text_field :description, class:"form-control" %>
+    <%= f.text_field :description, class:"form-control"%>
   </div>
   <div class="form-group">
     <%= f.label :attractions %><br>
