--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,7 +7,7 @@
         
         <%= link_to image_tag(place.image.url(:medium)),place %>
         
-        <%= place.description %>
+        <em> <%= place.headline %></em>
           <div class="actions">
             <%= link_to edit_place_path(place) do %>
               <span class="glyphicon glyphicon-edit"></span>
