--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <%= div_for(comment) do %>
   <p>
-    <strong> Posted <%= time_ago_in_words(comment.created_at) %> ago </strong></br>
+    <strong> Posted By <%=comment.user_name%> </strong><%= time_ago_in_words(comment.created_at) %> ago </br>
     <%= h(comment.body)%>
   </p>
 <%end%>
