Add CRUD to comment UI

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th>Place</th>
+      <th>User</th>
       <th>Body</th>
       <th></th>
       <th></th>
@@ -15,6 +16,7 @@
     <% @comments.each do |comment| %>
       <tr>
         <td><%= comment.place_id %></td>
+        <td><%= comment.user_name %></td>
         <td><%= comment.body %></td>
         <td><%= link_to 'Show', comment %></td>
         <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
@@ -26,4 +28,3 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
