--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,4 +3,9 @@
     <strong> Posted By <%=comment.user_name%> </strong><%= time_ago_in_words(comment.created_at) %> ago </br>
     <%= h(comment.body)%>
   </p>
+<%= link_to 'Show', comment %>
+<%= link_to 'Edit', edit_comment_path(comment) %>
+<%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+
 <%end%>
