Add Validation, and minor tweak to places model

--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -37,6 +37,10 @@
     <%= f.label :restaurants %><br>
     <%= f.text_field :restaurants, class:"form-control"  %>
   </div>
+  <div class="form-group">
+    <%= f.label :ladies %><br>
+    <%= f.text_field :ladies, class:"form-control"  %>
+  </div>
   <div class = "form-group">
     <%= f.submit class: "btn btn-primary" %>
   </div>
