Modify Place Views for new migration and validations

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -13,6 +13,7 @@ Back
 					<p><strong>Description:</strong><%= @place.description %></p>
 					<p><strong>Attractions:</strong><%= @place.attractions %></p>
 					<p><strong>Restaurants:</strong><%= @place.restaurants %></p>
+					<p><strong>Ladies:</strong><%= @place.ladies %></p>
 					<div class = "actions">
 						<%= link_to edit_place_path(@place) do %> 
 							 <span class="glyphicon glyphicon-edit"></span> Edit
