--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,12 @@
 <%= div_for(comment) do %>
-  <p>
-    <strong> Posted By <%=comment.user_name%> </strong><%= time_ago_in_words(comment.created_at) %> ago </br>
-    <%= h(comment.body)%>
-  </p>
-<%= link_to 'Show', comment %>
-<%= link_to 'Edit', edit_comment_path(comment) %>
-<%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
-
+  	<p>
+    	<strong> Posted By <%=comment.user_name%> </strong><%= time_ago_in_words(comment.created_at) %> ago </br>
+    	<%= h(comment.body)%>
+  	</p>
+	<%= link_to 'Show', comment %>
+	<%= link_to 'Edit', edit_comment_path(comment) %>
+	<%if current_user.try(:admin?)%>
+		<%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%end%>
 
 <%end%>
