--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,3 +1,5 @@
+<%if current_user.try(:admin?)%>
+
 <h1>Listing comments</h1>
 
 <table>
@@ -27,4 +29,8 @@
 </table>
 
 <br>
+<%else%>
 
+<p>This isn't the page you were looking for... </p><%= link_to 'Click Here To Return to Homepage', root_path %>
+
+<%end%>
