--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,6 +1,6 @@
 <%if current_user.try(:admin?)%>
-
-<h1>Listing comments</h1>
+<%= render 'pages/backdoorheader' %>
+<h1>All comments</h1>
 
 <table>
   <thead>
