--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,22 +14,29 @@
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
       <li><%= link_to "Home", root_path %></li>
+      <%if current_user.try(:admin?)%>
       <li><%= link_to "Backdoor", backdoor_path %></li> 
+      <%end%>
       <li><%= link_to "About", about_path %></li> 
       <!--<li><%= link_to "Contact", contact_path %></li>-->
        <% if user_signed_in? %>
+        <%if current_user.try(:admin?)%>
           <li><%= link_to new_place_path do %>
             <span class="glyphicon glyphicon-plus"></span> New Place
             <% end %>  
+        <%end%>
           </li>
+          
           <li><%= link_to edit_user_registration_path do %> 
             <span class="glyphicon glyphicon-wrench"></span> Account
             <%end%>
+
           </li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
-        <% end %>
+        <li><%= link_to "Sign up", new_user_registration_path %></li>
+        <li><%= link_to "Sign in", new_user_session_path %></li>
+      <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
