--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New comment</h1>
+<h1> StagAdvisor Comments</h1>
+<p> Bachelor party reviews</p>
+
 
 <%= render 'form' %>
 
-<%= link_to 'Back', comments_path %>
