--- a/app/views/pages/backdoor.html.erb
+++ b/app/views/pages/backdoor.html.erb
@@ -1,24 +1,47 @@
 <%if current_user.try(:admin?)%>
 <%= render 'pages/backdoorheader' %>
-
-<h4> Admin Users</h4>
-<% @users = User.all %>
-<% @users.each do |user| %>
-	<%if user.admin%>
-	  <%= user.name %>
-	  <%= user.email %>
-	  <%= user.sign_in_count %>
-	<br/>
-	<% end %>
-<% end %>
-
-<h4> All Users</h4>
-<% @users = User.all %>
-<% @users.each do |user| %>
-  <%= user.email %>
-  <%= user.sign_in_count %>
 <br/>
-<% end %>
+<h4> Admin Users</h4>
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Email</th>
+			<th>Login Count</th>
+		</tr>
+	<tbody>
+		<% @users = User.all %>
+		<% @users.each do |user| %>
+		<%if user.admin%>
+		  <tr><td><%= user.name %></td>
+		  <td><%= user.email %></td>
+		  <td><%= user.sign_in_count %></td></tr>
+			<% end %>
+			<% end %>
+	</tbody>
+</table>
+<br/>
+<h4> All Users</h4>
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Email</th>
+			<th>Login Count</th>
+		</tr>
+	<tbody>
+		<% @users = User.all %>
+		<% @users.each do |user| %>
+		<%if user.admin%>
+		<%else%>
+		  <tr><td><%= user.name %></td>
+		  <td><%= user.email %></td>
+		  <td><%= user.sign_in_count %></td></tr>
+			<% end %>
+			<% end %>
+	</tbody>
+</table>
+<br/>
 
 
 <%else%>
