--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -21,12 +21,13 @@ Back
 					<p><strong>Attractions:</strong><%= @place.attractions %></p>
 					<p><strong>Restaurants:</strong><%= @place.restaurants %></p>
 					<p><strong>Ladies:</strong><%= @place.ladies %></p>
-					<div class = "actions">
-						<%= link_to edit_place_path(@place) do %> 
-							 <span class="glyphicon glyphicon-edit"></span> Edit
-      			<% end %>
-					</div>
-				
+					<%if current_user.try(:admin?) or current_user.try(:editor?) %>
+						<div class = "actions">
+							<%= link_to edit_place_path(@place) do %> 
+								 <span class="glyphicon glyphicon-edit"></span> Edit
+	      					<% end %>
+						</div>
+					<%end%>
 				</div>
 
 			</div>
