--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,14 +1,14 @@
-$body-bg: #ffffff;
-$navbar-default-bg: #000000;
+$body-backgound: url('wood.jpg');
 $navbar-inverse-link-color: white;
 $brand-primary: #bdc3c7;
 $link-color: black;
 
 
-$panel-default-heading-bg: #bdc3c7; /*behind post body */
-$panel-bg: #bdc3c7; /*behind comments*/
-$well-bg: #bdc3c7;
+$panel-default-heading-bg: #ffffff; /*behind post body */
+$panel-bg: #ffffff; /*behind comments*/
+$well-bg: #ffffff;
 $btn-primary-bg: #27ae60;
+
 
 
 @import 'bootstrap';
