--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-custom" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -7,7 +7,9 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <h3><%= link_to "StagAdvisor", root_path %></h3>
+      <div class = "logo">
+        <%= link_to image_tag("StagAdvisorLogo.png", :alt => "logo", :title => "Home"), root_path %>
+    </div>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
