--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,16 +9,18 @@
         <%= link_to image_tag(place.image.url(:medium)),place %>
         </br>
         <em> <%= place.headline %></em>
-          <div class="actions">
-            <%= link_to edit_place_path(place) do %>
-              <span class="glyphicon glyphicon-edit"></span>
-              Edit
-            <% end %> |
-            <%= link_to place, method: :delete, data: { confirm: 'Are you sure?' } do %>
-              <span class="glyphicon glyphicon-trash"></span>
-                Delete
-            <% end %>
-          </div>
+          <%if current_user.try(:admin?)%>
+            <div class="actions">
+              <%= link_to edit_place_path(place) do %>
+                <span class="glyphicon glyphicon-edit"></span>
+                Edit
+              <% end %> |
+              <%= link_to place, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                <span class="glyphicon glyphicon-trash"></span>
+                  Delete
+              <% end %>
+            </div>
+          <%end%>
         </div>  
     </div>
   </div>
