--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,13 +1,13 @@
 $body-backgound: url('wood.jpg');
 $navbar-inverse-link-color: white;
-$brand-primary: #bdc3c7;
+$brand-primary: blue;
 $link-color: black;
 
 
 $panel-default-heading-bg: #ffffff; /*behind post body */
 $panel-bg: #ffffff; /*behind comments*/
 $well-bg: #ffffff;
-$btn-primary-bg: #27ae60;
+$btn-primary-bg: #3498db;
 
 
 
