--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -4,22 +4,41 @@
 
 #places {
   margin: 0 auto;
+  padding-top: 80px;
 }
 
 .box {
   margin: 5px;
   width: 314px;
+  background-color: #ecf0f1;
 }
 
 .box img {
   width: 100%;
 }
 
-img {
-    max-width: 80%;
+.panel-heading-custom img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+    max-width: 100%;
+    background-color: #ecf0f1;
+}
+.panel-body img {
+    max-width: 30%;
 }
 
 #panel-default {
   margin: 0 auto;
-  padding: 0;
+
+}
+
+.list-group img {
+	display: inline-block;
+}
+.actions-top {
+	text-align: right;
+}
+.panel-title {
+	text-align: center;
 }
