--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,14 +1,18 @@
 
 <div id="places" class="transition-enabled">
   <% @places.each do |place| %>
-  <div class="box panel panel-default">
-    <div class="panel-heading center">
-      <h4><%= place.title %></h4>
-      <div class="panel-body">
-        
+  <div class="box panel panel-default-custom">
+    <div class="panel-heading-custom">
+      <div class="panel-title center">
+        <h3><%= place.title %></h3>
+        <h5 class="headline"> <%= place.headline %></h5>
+      </div>
+      <div class="index-actions">
+         <%= link_to "Read The Review", place, :class => "btn-sm btn-primary indexbutton"%>
+      </div>
+      <div class="panel-body-index">
+       
         <%= link_to image_tag(place.image.url(:medium)),place %>
-        </br>
-        <em> <%= place.headline %></em>
           <%if current_user.try(:admin?)%>
             <div class="actions">
               <%= link_to edit_place_path(place) do %>
