--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,6 +46,7 @@ body {
 .panel-default-custom {
 	margin-top: 80px;
 	background-color: #ecf0f1;
+
 }
 
 .panel-heading {
@@ -54,7 +55,17 @@ body {
 
 .panel-title{
 	background-color: #ecf0f1;
+	text-align: center;
 }
+
+.panel-title img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+   	max-width: 40%;
+
+}
+
 .panel-body-index {
 	background-color: #ecf0f1;
 	text-align: center;
@@ -63,6 +74,13 @@ body {
 .index-actions {
 	margin-bottom: 5px;
 	display: block;
-	margin-right: 0px;
+	margin-right: auto;
 	margin-left: auto;
+	text-align: center;
 }
+
+.comment-custom{
+	background-color: #ecf0f1;
+	margin: 10px;
+}
+
