--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -21,9 +21,19 @@
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-    max-width: 100%;
-    background-color: #ecf0f1;
+  max-width: 100;
+  background-color: #ecf0f1;
 }
+
+.panel-default-custom {
+  background-color: #ecf0f1;
+}
+
+.panel-heading-custom  {
+
+  background-color: #ecf0f1;
+}
+
 .panel-body img {
     max-width: 30%;
 }
@@ -38,7 +48,4 @@
 }
 .actions-top {
 	text-align: right;
-}
-.panel-title {
-	text-align: center;
 }
