--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="col-md-offset2 col-md-9">
 		<div class="panel panel-default-custom">
-			<div class="panel-heading-custom">
+			
 				<%= link_to places_path do %>
 					<span class = "glyphicon glyphicon-chevron-left"></span>Back
 				<%end%>
@@ -16,9 +16,11 @@
 				<%end%>
 				<div class="panel-title">
 					<h2><%= @place.title %></h2>
-					<h3 class="headline"><%= @place.headline %></h3>
 					<h1><%= show_overall_stars @place if @place.overallstars %></h1>
+					<h3 class="headline"><%= @place.headline %></h3>
+					
 				</div>
+				<div class="panel-heading-custom">
 				<p><%= image_tag @place.image.url(:medium) %></p>
 					<div class="panel-body">
 					 	<!--<div class="well">
@@ -52,16 +54,14 @@
 					<p><%=f.submit "Add Comment", class: "btn btn-primary" %></p>
 				<%end%>
 			<%else%>
-				<%= link_to "Quick Sign Up to Comment", new_user_registration_path, class: "btn btn-primary"%>
-			<%end%>
-			<h6> All Comments </h6>
-			<%= render :partial => @place.comments %>
+			<div class="comment-custom">
+					<%= link_to "Quick Sign Up to Comment", new_user_registration_path, class: "btn btn-primary"%>
+				<%end%>
+				<h5> Stag Comments </h5>
+				<%= render :partial => @place.comments %>
+			</div>
 		 </div>
 		</div>
-	</div>
-
-	<div class="col-md-3">
-		This is where I would list Other Articles!
 	</div>
 
 </div>
