Static Pages Design Improvement

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1> About</h1>
-<p> We are here to make sure that your stag finishes with a BANG!</p>
+<div class="static panel panel-default">
+	<h1> About</h1>
+	<p> We are here to make sure that your stag finishes with a BANG!</p>
+</div>
