--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="panel panel-default">
+<div class="devised panel panel-default">
   <div class="panel-heading">
-    <div class="panel-title">
+    
       <h1>Edit <%= resource_name.to_s.humanize %></h1>
-    </div>
+
   </div>
   <div class="panel-body">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
