--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div class="panel panel-default">
+<div class="devised panel panel-default">
   <div class="panel-heading">
-    <h1>Sign up</h1>
+    <h1>Sign up for Free</h1>
     <div class = "signin_alt"
       <%- if controller_name != 'sessions' %>
         <p> Already a Member? <%= link_to "Sign in Here", new_session_path(resource_name), class: "btn btn-default"%> </p>
