--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,9 +42,11 @@ body {
   background-color: #000000;
   border-radius: 1px;
 }
-
+.panel {
+	background-color: #ecf0f1;
+}
 .panel-default-custom {
-	margin-top: 80px;
+	margin-top: 10px;
 	background-color: #ecf0f1;
 
 }
@@ -56,6 +58,7 @@ body {
 .panel-title{
 	background-color: #ecf0f1;
 	text-align: center;
+	padding-top: 0px;
 }
 
 .panel-title img {
@@ -85,10 +88,14 @@ body {
 }
 
 .devised {
-	margin-top: 60px;
+	margin-top: 10px;
 }
 
 .static {
-	margin-top: 70px;
+	margin-top: 10px;
 	padding-left: 10px;
+}
+
+.container {
+	margin-top: 60px;
 }
