--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,3 +1,4 @@
+<div class="panel panel-body">
 <h1>New place</h1>
 <%if current_user.try(:admin?) or current_user.try(:editor?) %>
 <%= render 'form' %>
@@ -6,3 +7,4 @@
 <p>This isn't the page you were looking for... </p><%= link_to 'Click Here To Return to Homepage', root_path %>
 
 <%end%>
+</div>
