--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -18,12 +18,12 @@
 
   <div class="form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title, class:"form-control"  %>
+    <%= f.text_field :title, class:"form-control", :placeholder =>'City, Country' %>
   </div>
 
   <div class="form-group">
     <%= f.label :headline %><br>
-    <%= f.text_field :headline, class:"form-control"  %>
+    <%= f.text_field :headline, class:"form-control", :placeholder =>'Quick Tagline... Be Creative!'  %>
   </div>
 
   <div class="form_group">
@@ -42,7 +42,7 @@
 
   <div class = "form-group">
     <%= f.label :description %><br>
-    <%= f.text_field :description, class:"form-control"%>
+    <%= f.text_area :description, class:"form-control", :placeholder =>'Overall imperssion, for those who like to skim', :rows=>'4' %>
   </div>
 
 
@@ -64,7 +64,7 @@
 
   <div class="form-group">
     <%= f.label :attractions %><br>
-    <%= f.text_field :attractions, class:"form-control"  %>
+    <%= f.text_area :attractions, class:"form-control", :placeholder =>'Fun Activities, Sights To See, Things that you must do', :rows=>'10' %>
   </div>
 
   <div class="form_group">
@@ -83,7 +83,7 @@
 
   <div class="form-group">
     <%= f.label :restaurants %><br>
-    <%= f.text_field :restaurants, class:"form-control"  %>
+    <%= f.text_area :restaurants, class:"form-control", :placeholder =>'Name some places you like to eat at!', :rows=>'10' %>
   </div>
 
   <div class="form_group">
@@ -103,7 +103,7 @@
 
   <div class="form-group">
     <%= f.label :ladies %><br>
-    <%= f.text_field :ladies, class:"form-control"  %>
+    <%= f.text_area :ladies, class:"form-control", :placeholder =>'How was the Local Talent, and How were the pros ;)', :rows=>'10'  %>
   </div>
 
   <div class="form_group">
@@ -123,7 +123,7 @@
 
   <div class="form-group">
     <%= f.label :hotel %><br>
-    <%= f.text_field :hotel, class:"form-control"  %>
+    <%= f.text_area :hotel, class:"form-control", :placeholder =>'Name some hotels that you recommend', :rows=>'10'  %>
   </div>
 
   <div class = "form-group">
