--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
       <li><%= link_to "About", about_path %></li> 
       <!--<li><%= link_to "Contact", contact_path %></li>-->
        <% if user_signed_in? %>
-        <%if current_user.try(:admin?)%>
+        <%if current_user.try(:admin?) or current_user.try(:editor?)%>
           <li><%= link_to new_place_path do %>
             <span class="glyphicon glyphicon-plus"></span> New Place
             <% end %>  
