Glyphicon temp removal

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,7 +30,7 @@
           </li>
           
           <li><%= link_to edit_user_registration_path do %> 
-            <span class="glyphicon glyphicon-wrench"></span> Account
+            Account
             <%end%>
 
           </li>
