--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -4,7 +4,7 @@
 	<div class="col-md-offset2 col-md-9">
 		<div class="panel panel-default-custom">
 				<%= link_to places_path do %>
-					<span class = "glyphicon glyphicon-chevron-left"></span>Back
+					Back
 				<%end%>
 				<% if current_user.try(:admin?) or  @place.user == current_user %>
 					<div class="actions-top">
